# linxi-bot

./: .gitattributes  .gitignore  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  website-deploy.yml
linxi/configs/: config.py  path_config.py
linxi/configs/utils/: __init__.py
linxi/plugins/: dialogue.py  notice.py  withdraw.py
linxi/plugins/arcaea/: __init__.py
linxi/plugins/arcaea/handler/: assets_update.py  b30.py  bind.py  default.py  help.py  info.py  pre.py  preview.py  ptt.py  random.py  recent.py  song.py  ui.py
linxi/plugins/bilibili/: __init__.py  config.py
linxi/plugins/bilibili/b23/: __init__.py  config.py
linxi/plugins/bilibili/bili_src/: basicFunc.py  biliStream.py  biliTelegram.py  biliVideo.py  bili_client.py  bili_dynamic.py  bili_dynamic_dbg.py  bili_task.py  db.py  exception.py  rule.py
linxi/plugins/bottle/: __init__.py  config.py  data_source.py
linxi/plugins/genshin/: __init__.py
linxi/plugins/github/: __init__.py  data_source.py
linxi/plugins/help/: __init__.py  data_source.py
linxi/plugins/kawaii/: __init__.py  config.py  utils.py
linxi/plugins/manage/: __init__.py  admin.py  admin_role.py  approve.py  auto_ban.py  auto_ban_.py  config.py  func_hook.py  group_request_verify.py  notice.py  particular_e_notice.py  path.py  request_manual.py  requests.py  utils.py
linxi/plugins/music/: __init__.py  data_source.py
linxi/plugins/ping/: __init__.py  __main__.py  config.py  draw.py
linxi/plugins/plugin_manage/: __init__.py
linxi/plugins/who_at_me/: __init__.py  config.py  data_source.py  database.py  rule.py  utils.py
linxi/plugins/xiuxian/: __init__.py  config.py  data_source.py  download_xiuxian_data.py  item_json.py  lay_out.py  player_fight.py  read_buff.py  utils.py  xiuxian2_handle.py  xiuxian_config.py  xiuxian_opertion.py  xn_xiuxian_impart.py  xn_xiuxian_impart_config.py
linxi/utils/: browser.py  http_utils.py  image_utils.py  message_builder.py  utils.py
linxi/utils/depends/: __init__.py
resources/text/kawaii/: data.json  leaf.json
website/: README.md
website/.vuepress/: config.ts
website/.vuepress/styles/: index.css
website/blogs/: message-board.md
website/blogs/about/: about.md  contribute.md  introduce.md
website/docs/: README.md  clause.md  faq.md  module.md  policy.md  tips.md
website/docs/module/: bottle.md
website/docs/obtain/: qq.md
(+57 files in other folders)
