[project]
name = "linxi"
version = "0.8.0"
description = "linxi"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender", "nonebot_plugin_sentry"]
plugin_dirs = ["linxi/plugins"]
builtin_plugins = ["echo"]
