[project]
name = "linxi"
version = "0.8.0"
description = "linxi"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_htmlrender", "nonebot_plugin_sentry"]
plugin_dirs = ["linxi/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "linxi-bot"
version = "0.8.0"
description = "基于 Nonebot2 开发的QQ机器人，超可爱的林汐酱"
authors = ["mute. <mute23@qq.com>"]
license = "AGPL-3.0 license"
readme = "README.md"
packages = [{include = "linxi_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "23.1.0"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
aiosqlite = "0.18.0"
alembic = "1.10.2"
anyio = "3.6.2"
appdirs = "1.4.4"
apscheduler = "3.10.1"
arrow = "1.2.3"
async-timeout = "4.0.2"
attrs = "22.2.0"
audioread = "3.0.0"
bbcode = "1.1.0"
binaryornot = "0.4.4"
cashews = "5.3.1"
cattrs = "22.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
chardet = "5.1.0"
charset-normalizer = "3.0.1"
chevron = "0.14.0"
click = "8.1.3"
colorama = "0.4.6"
contourpy = "1.0.7"
cookiecutter = "2.1.1"
cycler = "0.11.0"
decorator = "5.1.1"
distlib = "0.3.6"
exceptiongroup = "1.1.0"
fastapi = "0.92.0"
filelock = "3.10.4"
filetype = "1.2.0"
fonttools = "4.38.0"
frozenlist = "1.3.3"
fuzzyfinder = "2.1.0"
greenlet = "2.0.1"
h11 = "0.12.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "0.15.0"
httptools = "0.5.0"
httpx = "0.23.0"
hyperframe = "6.0.1"
idna = "3.4"
imagehash = "4.3.1"
importlib-metadata = "4.13.0"
inflect = "5.6.2"
inflection = "0.5.1"
install = "1.3.5"
jieba = "0.42.1"
jinja2 = "3.1.2"
jinja2-time = "0.2.0"
joblib = "1.2.0"
kiwisolver = "1.4.4"
langid = "1.1.6"
lazy-loader = "0.1"
librosa = "0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
